--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "font-cache"
+name = "elefont"
 version = "0.1.0"
 authors = ["Ryan Goldstein <ryan@ryanisaacg.com>"]
 edition = "2018"
