--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hashbrown = { version = "0.7.1", default-features = false, features = ["ahash"] }
 image = { version = "0.22", default-features = false, optional = true }
 rusttype = { version = "0.8", optional = true }
 unicode-normalization = { version = "0.1.12", optional = true }
