--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 authors = ["Ryan Goldstein <ryan@ryanisaacg.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+std = []
 
 [dependencies]
 hashbrown = { version = "0.7.1", default-features = false, features = ["ahash"] }
