--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -18,10 +18,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         rust: [stable, nightly]
-				features:
-          - ''
-          - '--all-features'
-          - '--features image,rusttype'
+				options: ['', '--all-features', '--features image,rusttype']
     steps:
     - uses: hecrj/setup-rust-action@v1.2.0
       with:
@@ -29,7 +26,7 @@ jobs:
         components: clippy,rustfmt
     - uses: actions/checkout@master
     - name: Clippy
-      run: cargo test ${{ matrix.features }}
+      run: cargo test ${{ matrix.options }}
 
   clippy:
     strategy:
