--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         rust: [stable, nightly]
-				options: ['', '--all-features', '--features image,rusttype']
+				options: ['']
     steps:
     - uses: hecrj/setup-rust-action@v1.2.0
       with:
