--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         rust: [stable, nightly]
-        features: []
+        features: ['', '--all-features']
     steps:
     - uses: hecrj/setup-rust-action@v1.2.0
       with:
