--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,13 @@ version = "0.1.3"
 authors = ["Ryan Goldstein <ryan@ryanisaacg.com>"]
 edition = "2018"
 categories = ["text-processing"]
-keywords = ["font", "font-cache"]
+keywords = ["font", "font-cache", "glyph", "glyph-cache"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/ryanisaacg/elefont"
 
 [package.metadata.docs.rs]
-features = ["image", "rusttype"]
+features = ["image", "rusttype", "fontdue"]
 
 [features]
 std = []
@@ -20,6 +20,7 @@ std = []
 hashbrown = { version = "0.7.1", default-features = false, features = ["ahash"] }
 image = { version = "0.22", default-features = false, optional = true }
 rusttype = { version = "0.8", optional = true }
+fontdue = { version = "0.0.4", optional = true }
 unicode-normalization = { version = "0.1.12", optional = true }
 
 [[example]]
