--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ features = ["image", "rusttype", "fontdue"]
 std = []
 
 [dependencies]
-hashbrown = { version = "0.9.1", default-features = false, features = ["ahash"] }
+hashbrown = { version = "0.9.1", default-features = false }
+ahash = "0.7"
 image = { version = "0.23.12", default-features = false, optional = true }
 rusttype = { version = "0.9.2", optional = true }
 fontdue = { version = "0.4.0", optional = true }
