--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,11 @@ features = ["image", "rusttype", "fontdue"]
 std = []
 
 [dependencies]
-hashbrown = { version = "0.7.1", default-features = false, features = ["ahash"] }
-image = { version = "0.22", default-features = false, optional = true }
-rusttype = { version = "0.8", optional = true }
-fontdue = { version = "0.0.4", optional = true }
+hashbrown = { version = "0.9.1", default-features = false }
+ahash = "0.7"
+image = { version = "0.23.12", default-features = false, optional = true }
+rusttype = { version = "0.9.2", optional = true }
+fontdue = { version = "0.4.0", optional = true }
 unicode-normalization = { version = "0.1.12", optional = true }
 
 [[example]]
